WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154174
NSRangeIsRelativeTo should not have NS prefix
https://bugs.webkit.org/show_bug.cgi?id=154174
Summary
NSRangeIsRelativeTo should not have NS prefix
Beth Dakin
Reported
2016-02-12 10:52:10 PST
NSRangeIsRelativeTo should not have NS prefix.
Attachments
Patch
(4.58 KB, patch)
2016-02-12 10:53 PST
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2016-02-12 10:53:17 PST
Created
attachment 271187
[details]
Patch
Beth Dakin
Comment 2
2016-02-12 11:43:34 PST
Thanks Tim!
http://trac.webkit.org/changeset/196489
Alexey Proskuryakov
Comment 3
2016-02-12 12:02:50 PST
Do we usually use "WKNS" prefix for this sort of thing?
Beth Dakin
Comment 4
2016-02-12 12:22:52 PST
(In reply to
comment #3
)
> Do we usually use "WKNS" prefix for this sort of thing?
I don't see any use of that in WebKit 1 (except for a stray WebKitSystemInterface function name). Generally I feel like we use "Web" in WebKit1 and "WK" in WebKit2, so WebNS might be better, but I think just Web is okay too?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug