Source/WebKit/mac/WebView/WebFrame.mm
@@ -793,17 +793,17 @@ static inline WebDataSource *dataSource(DocumentLoader* loader)
 
 - (PassRefPtr<Range>)_convertToDOMRange:(NSRange)nsrange
 {
-    return [self _convertToDOMRange:nsrange rangeIsRelativeTo:NSRangeIsRelativeTo::EditableRoot];
+    return [self _convertToDOMRange:nsrange rangeIsRelativeTo:WebRangeIsRelativeTo::EditableRoot];
 }
 
-- (PassRefPtr<Range>)_convertToDOMRange:(NSRange)nsrange rangeIsRelativeTo:(NSRangeIsRelativeTo)rangeIsRelativeTo
+- (PassRefPtr<Range>)_convertToDOMRange:(NSRange)nsrange rangeIsRelativeTo:(WebRangeIsRelativeTo)rangeIsRelativeTo
 {
     if (nsrange.location > INT_MAX)
         return 0;
     if (nsrange.length > INT_MAX || nsrange.location + nsrange.length > INT_MAX)
         nsrange.length = INT_MAX - nsrange.location;
 
-    if (rangeIsRelativeTo == NSRangeIsRelativeTo::EditableRoot) {
+    if (rangeIsRelativeTo == WebRangeIsRelativeTo::EditableRoot) {
         // Our critical assumption is that this code path is only called by input methods that
         // concentrate on a given area containing the selection
         // We have to do this because of text fields and textareas. The DOM for those is not
@@ -816,7 +816,7 @@ static inline WebDataSource *dataSource(DocumentLoader* loader)
         return TextIterator::rangeFromLocationAndLength(element, nsrange.location, nsrange.length);
     }
 
-    ASSERT(rangeIsRelativeTo == NSRangeIsRelativeTo::Paragraph);
+    ASSERT(rangeIsRelativeTo == WebRangeIsRelativeTo::Paragraph);
 
     const VisibleSelection& selection = _private->coreFrame->selection().selection();
     RefPtr<Range> selectedRange = selection.toNormalizedRange();
